<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">
    
    <!-- logo  -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80px"
        android:id="@+id/rl_logo">
        
        <ImageView 
		android:layout_width="280px" 
        android:layout_height="280px"
        android:id="@+id/about_logo" 
        android:background="@drawable/logoc" 
        android:layout_alignParentTop="true"        
        android:layout_centerHorizontal="true"
        />
    
    </RelativeLayout>
    
    <!-- version -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/rl_version"
        android:layout_below="@+id/rl_logo">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18px"
            android:textColor="#666666"
            android:text="@string/about_text_version"/>

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rl_version">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14px"
            android:textColor="#666666"
            android:id="@+id/about_site"
            android:text="@string/about_text_site"
        />

    </RelativeLayout>
    
    <!-- copyright -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/rl_copyright_detail"
        >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14px"
            android:textColor="#666666"
            android:text="@string/about_text_copyright"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30px"
        android:id="@+id/rl_copyright_detail">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14px"
            android:textColor="#666666"
            android:text="@string/about_text_copyright_detail"/>
    </RelativeLayout>
</RelativeLayout>
